# YiEngine

./: .clang-format  CMakeLists.txt  README.md
Core/: CMakeLists.txt
Core/GenericPlatform/: GenericPlatform.h
Core/HAL/: Platform.h
Core/Linux/: LinuxPlatform.h
Core/Unix/: UnixPlatform.h
Core/Windows/: WIndowsPlatform.h
Doc/: 深入浅出Unreal Engine引擎架构.docx
OpenGL/: CMakeLists.txt
Vulkan/: CMakeLists.txt
Yi/: CMakeLists.txt  main.cpp
